# pthub

./: CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  README.md
app/controllers/: sessions_controller.rb
app/views/sessions/: new.html.erb
app/views/welcome/: landing.html.erb
auth/: Gemfile  README.md
auth/app/controllers/: application_controller.rb  welcome_controller.rb
auth/app/models/: user.rb
auth/config/: database.yml  puma.rb  routes.rb
auth/db/: schema.rb
auth/db/migrate/: 20250326232226_add_refresh_token.rb
config/: application.rb  credentials.yml.enc  routes.rb
config/environments/: production.rb
config/initializers/: omniauth.rb
db/: schema.rb
db/migrate/: 20250326215821_add_google_auth_to_users.rb
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ActivityCard.tsx  ActivityList.tsx  ActivityPage.tsx  AssignmentList.tsx  AssignmentPage.tsx  AvailabilityTable.tsx  ClientsPage.tsx  EmailForm.tsx  ExerciseCard.tsx  ExerciseList.tsx  ExercisePage.tsx  LoginPage.tsx  NavBar.tsx  NewUserForm.tsx  ReservationTable.tsx  SuperSetActivityCard.tsx  TrainerGrid.tsx  UserForm.tsx  WorkoutCard.tsx  WorkoutList.tsx  WorkoutPage.tsx  WorkoutsList.tsx
frontend/src/helpers/: dates.ts
frontend/src/hooks/: users.ts
posture-analysis/: README.md  pyproject.toml
posture-analysis/src/posture_analysis/: main.py
server/: .env.example  README.md  package-lock.json  package.json
server/src/: Body weight 4.xlsx  data-source.ts  index.ts  workoutImporter.ts
(+60 files in other folders)
