[project]
name = "posture-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Trevor McCasland",email = "trevormccasland1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)"
]

[tool.poetry]
packages = [{include = "posture_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
